<resources>
    <string name="app_name">MessagingApp</string>
    <string name="send">send</string>
    <string name="received_message">received message</string>
    <string name="time_message">time message</string>
    <string name="sent_message">sent message</string>
    <string name="user_name">User Name</string>
    <string name="gmail">Gmail</string>
    <string name="find_user_other">find other user to make messages</string>
    <string name="find">Find</string>
    <string name="add_group">add group</string>
    <string name="enter_name_of_group">Enter name of group</string>
    <string name="accept">accept</string>
    <string name="exit">exit</string>
    <string name="email">email</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">welcome back</string>
    <string name="sign_in">sign_in</string>
    <string name="create_new_account">create_new_account</string>
    <string name="password">password</string>
    <string name="add_image">add image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="cant_find_other_users">Can\'t find other user</string>
    <string name="user_found">User found</string>
    <string name="name_group">name group</string>
    <string name="settings">settings</string>
    <string name="add_user_to_group">add</string>
    <string name="modify_information_user">Modify information User</string>
    <string name="make_a_group">make a group</string>
    <string name="log_out">Log out</string>
    <string name="accept_modify">accept</string>
    <string name="list_member">list member</string>
    <string name="add_member">add member</string>
    <string name="out_group">out group</string>
    <string name="msg_token_fmt">fcm_token_mesage</string>

</resources>