<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <EditText
        android:id="@+id/findOtherUserEditTextInDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_user_other"/>
    <Button
        android:id="@+id/findOtherUserButtonInDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/findOtherUserRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/canNotOtherUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cant_find_other_users"/>

</LinearLayout>