<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidx = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation = "vertical">
    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/modifyInfoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_information_user"/>
    <TextView
        android:id="@+id/makeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_a_group"/>
    <TextView
        android:id="@+id/logOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        androidx:drawableLeftCompat="@drawable/baseline_logout_black_24dp" />
</LinearLayout>