<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <RelativeLayout
        android:id="@+id/addimage"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageGroupAdded"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            >
        </com.makeramen.roundedimageview.RoundedImageView>

        <TextView
            android:id="@+id/textAddImageGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:text="@string/add_image" />

    </RelativeLayout>
    <EditText
        android:id="@+id/enterNameGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_group"
        android:padding="20dp"
        android:layout_below="@id/addimage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/enterNameGroup">
        <Button
            android:id="@+id/exitMakeGroup"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/exit"/>
        <Button
            android:id="@+id/acceptMakeGroup"
            android:layout_width="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_height="40dp"
            android:text="@string/accept"/>
    </LinearLayout>
</RelativeLayout>