<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidx="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chatListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                androidx:ignore="MissingConstraints" />
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/chatListImageUser"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@color/design_default_color_primary"
                app:layout_constraintTop_toTopOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="@id/toolbar"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:shapeAppearanceOverlay="@style/Circular"
                >
            </com.google.android.material.imageview.ShapeableImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/chatListImageUser"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/chatListUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"/>
                <TextView
                    android:id="@+id/chatListUserGmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/gmail"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="Chats"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="@id/toolbar"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/InfoUser"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_action_name"
                android:backgroundTint="#808080"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <EditText
        android:id="@+id/chatListFindOtherUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_user_other"
        android:layout_below="@+id/appbar"/>
    <Button
        android:id="@+id/findOtherUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:layout_below="@id/chatListFindOtherUser"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListConversation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/findOtherUserButton" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal">-->
<!--        <ImageView-->
<!--            android:id="@+id/chatListImageUser"-->
<!--            android:layout_width="60dp"-->
<!--            android:layout_height="60dp"-->
<!--            android:cropToPadding="true"-->
<!--            android:background="@color/cardview_light_background"/>-->
<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->
<!--            <TextView-->
<!--                android:id="@+id/chatListUserName"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/user_name"/>-->
<!--            <TextView-->
<!--                android:id="@+id/chatListUserGmail"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text = "@string/gmail"/>-->
<!--        </LinearLayout>-->

<!--        <ImageButton-->
<!--            android:id="@+id/InfoUser"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:src = "@drawable/ic_action_name"/>-->
<!--    </LinearLayout>-->
<!--    <EditText-->
<!--        android:id="@+id/chatListFindOtherUser"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/find_user_other"/>-->
<!--    <Button-->
<!--        android:id="@+id/findOtherUserButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/find"/>-->
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerListConversation"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
</RelativeLayout>